# rust-as-systemd

./: Cargo.toml  apply-changes.sh  rust-as-systemd.service
src/: main.rs
